--- a/ModerStore.Domain.Teste/ModerStore.Domain.Teste.csproj
+++ b/ModerStore.Domain.Teste/ModerStore.Domain.Teste.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="CustomerTeste.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="OrderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
