--- a/ModernStore.Shared/ModernStore.Shared.csproj
+++ b/ModernStore.Shared/ModernStore.Shared.csproj
@@ -38,6 +38,8 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\ICommad.cs" />
+    <Compile Include="Commands\ICommandHandler.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
