Adicionando api e seus métodos

--- a/ModernStore.Domain/ModernStore.Domain.csproj
+++ b/ModernStore.Domain/ModernStore.Domain.csproj
@@ -38,6 +38,8 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\Results\GetCustomerCommadResult.cs" />
+    <Compile Include="Commands\Results\GetProductListCommadResult.cs" />
     <Compile Include="Commands\Results\RegisterCustomerCommadResult.cs" />
     <Compile Include="Commands\Results\RegisterOrderCommadResult.cs" />
     <Compile Include="Commands\Handlers\CustomerCommadHandler.cs" />
