--- a/ModernStore.Shared/ModernStore.Shared.csproj
+++ b/ModernStore.Shared/ModernStore.Shared.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Commands\ICommandHandler.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Runtime.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
